[project]
name = "caputils"
version = "1.1+dev"
description = "Simple utilities for pcap parsing and wrappers for commands bundled with Wireshark."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "chillb0nes" },
]
license.file = "LICENSE"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "dpkt~=1.9.8",
]

[project.urls]
repository = "https://github.com/chillb0nes/caputils"

[build-system]
requires = [
    "setuptools>=64.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "caputils",
]
